infra/k8s/ticket-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-mongo
  template:
    metadata:
      labels:
        app: ticket-mongo
    spec:
      containers:
        - name: ticket-mongo
          image: mongo:latest
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-mongo-svc
spec:
  selector:
    app: ticket-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
