infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress-service

  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  ingressClassName: nginx

  rules:
    - host: ticketing.kube
      http:
        paths:

          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
